# galact-codex-api

./: .env.example  README.md  ROADMAP.md  main.py  openapi2-functions.yaml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/schemas/: film.py  person.py  planet.py  starship.py
app/services/: swapi.py
tests/: conftest.py  test_routes.py
tests/e2e/: test_e2e.py
tests/unit/: test_film_service.py  test_people_service.py
