[project]
name = "galact-codex-api"
version = "0.1.0"
description = "API para consultar diversas informações sobre a lore da franquia Star Wars"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.1.2",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.1",
  "requests>=2.32.5",
]
